# objeto_2detectoresideales

./: README.md
2detectoresconobjeto/: CMakeLists.txt  action.hh  construction.cc  construction.hh  detector.cc  detector.hh  generator.cc  generator.hh  physics.cc  physics.hh  run.cc  run.hh  sim.cc
